--- a/email-manager/email-manager/Views/Emails/Create.cshtml
+++ b/email-manager/email-manager/Views/Emails/Create.cshtml
@@ -23,6 +23,16 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Object" class="control-label"></label>
+                <input asp-for="Object" class="form-control" />
+                <span asp-validation-for="Object" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Expeditor" class="control-label"></label>
+                <input asp-for="Expeditor" class="form-control" />
+                <span asp-validation-for="Expeditor" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
