--- a/email-manager/email-manager/Views/Emails/Delete.cshtml
+++ b/email-manager/email-manager/Views/Emails/Delete.cshtml
@@ -23,6 +23,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Content)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Object)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Object)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Expeditor)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Expeditor)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
