--- a/email-manager/email-manager/Views/Emails/Details.cshtml
+++ b/email-manager/email-manager/Views/Emails/Details.cshtml
@@ -22,6 +22,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Content)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Object)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Object)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Expeditor)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Expeditor)
+        </dd>
     </dl>
 </div>
 <div>
