--- a/email-manager/email-manager/Views/Emails/Index.cshtml
+++ b/email-manager/email-manager/Views/Emails/Index.cshtml
@@ -18,6 +18,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Content)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Object)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Expeditor)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +35,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Content)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Object)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Expeditor)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
