--- a/email-manager/email-manager/Views/Shared/_Layout.cshtml
+++ b/email-manager/email-manager/Views/Shared/_Layout.cshtml
@@ -24,6 +24,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Campaigns" asp-action="Index">Campaigns</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Emails" asp-action="Index">Emails</a>
+                        </li>
                     </ul>
                 </div>
             </div>
