--- a/email-manager/email-manager/Views/Campaigns/Create.cshtml
+++ b/email-manager/email-manager/Views/Campaigns/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model email_manager.Models.Campaign
+﻿@model email_manager.ViewModels.CampaignDto
 
 @{
     ViewData["Title"] = "Create";
@@ -18,12 +18,32 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CampaingStatusId" class="control-label"></label>
-                <select asp-for="CampaingStatusId" class ="form-control" asp-items="ViewBag.CampaingStatusId"></select>
+                <label asp-for="EmailId" class="control-label"></label>
+                <select asp-for="EmailId" class="form-control" asp-items="ViewBag.EmailId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="EmailId" class="control-label"></label>
-                <select asp-for="EmailId" class ="form-control" asp-items="ViewBag.EmailId"></select>
+                <label asp-for="EmailName" class="control-label"></label>
+                <input asp-for="EmailName" class="form-control" />
+                <span asp-validation-for="EmailName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EmailContent" class="control-label"></label>
+                <input asp-for="EmailContent" class="form-control" />
+                <span asp-validation-for="EmailContent" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EmailObject" class="control-label"></label>
+                <input asp-for="EmailObject" class="form-control" />
+                <span asp-validation-for="EmailObject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EmailExpeditor" class="control-label"></label>
+                <input asp-for="EmailExpeditor" class="form-control" />
+                <span asp-validation-for="EmailExpeditor" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ContactsEmailAdress" class="control-label"></label>
+                <select asp-for="ContactsEmailAdress" multiple="multiple" class="form-control multi-select" asp-items="ViewBag.ContactsEmailAdress"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
