--- a/email-manager/email-manager/Views/Campaigns/Details.cshtml
+++ b/email-manager/email-manager/Views/Campaigns/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.CampaignStatus)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CampaignStatus.Id)
+            @Html.DisplayFor(model => model.CampaignStatus.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
